bug fix : overflowing images

--- a/src/components/dowloadGameSection/downloadGameSection.scss
+++ b/src/components/dowloadGameSection/downloadGameSection.scss
@@ -7,6 +7,7 @@
     align-items: center;
     text-align: center;
     flex-direction: column;
+    overflow: hidden;
     gap: 130px;
 
     .title {
